// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssetName renders the component asset with name 1`] = `
<Component
  style={
    Object {
      "paddingTop": 13.34,
    }
  }
>
  <Component
    style={
      Object {
        "color": "#CCCCCC",
        "fontWeight": "bold",
      }
    }
  >
    Sample Parcel
  </Component>
</Component>
`;

exports[`AssetName renders the component asset without name 1`] = `
<Component
  style={
    Object {
      "paddingTop": 13.34,
    }
  }
>
  <Component
    style={
      Object {
        "color": "#CCCCCC",
        "fontWeight": "bold",
      }
    }
  >
    (No name for this one right now)
  </Component>
</Component>
`;
